--- a/index.html
+++ b/index.html
@@ -50,11 +50,8 @@
         <a href="https://github.com/syeo-1" style="font-size: 18px" target="_blank">Github</a>
       </div>
       <div class="col-sm-4">
-        <a href="https://www.linkedin.com/" style="font-size: 18px" target="_blank">LinkedIn</a>
+        <a href="www.linkedin.com/in/seanyeo-1" style="font-size: 18px" target="_blank">LinkedIn</a>
       </div>
-      <!-- <div class="col-sm-2">
-        <a href="https://tunein.com/podcasts/">Podcast</a>
-      </div> -->
     </div>
   </footer>
 </html>
