--- a/projects.html
+++ b/projects.html
@@ -17,15 +17,6 @@
         </nav>
       </div>
     </header>
-    	<!-- <section class="jumbotron">
-        <div class="container">
-          <div class="row">
-            <h2>Education</h2>
-            <br>
-            <h3>Python, Java, Swift, Javascript</h3>
-          </div>
-        </div>
-    </section> -->
     <section class="container">
       <div class="row">
         <div class="col-sm-6">
@@ -72,18 +63,12 @@
   <footer class="container">
     <div class="row">
       <p class="col-sm-4">&copy; 2019 Sean Yeo</p>
-      <!-- <div class="col-sm-2">
-        <a href="https://medium.com/">Medium</a>
-      </div> -->
       <div class="col-sm-4">
         <a href="https://github.com/syeo-1" style="font-size: 18px" target="_blank">Github</a>
       </div>
       <div class="col-sm-4">
-        <a href="https://www.linkedin.com/" style="font-size: 18px" target="_blank">LinkedIn</a>
+        <a href="www.linkedin.com/in/seanyeo-1" style="font-size: 18px" target="_blank">LinkedIn</a>
       </div>
-      <!-- <div class="col-sm-2">
-        <a href="https://tunein.com/podcasts/">Podcast</a>
-      </div> -->
     </div>
   </footer>
 </html>
