--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,6 @@
     </header>
     <section class="jumbotron">
         <div class="container-fluid">
-          <!-- <div class="row justify-content-center row-no-gutters">
-            <h1>Sean Yeo</h1>
-          </div> -->
           <div class="row justify-content-center row-no-gutters">
             <h2>Currently in search of a co-op/internship for the Summer of 2020 (May-August)</h2>
           </div>
@@ -33,61 +30,16 @@
           </div>
         </div>
     </section>
-    <!-- <section class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <h5>Email</h5>
-          <li>seansqyeo@gmail.com</li>
-        </div>
-        <div class="col-sm-6">
-          <h5>Phone</h5>
-          <img src="https://www.pexels.com/photo/adult-beard-boy-casual-220453/">
-          <li>778-872-3257</li>
-        </div>
-        <div class="col-sm-3">
-          <h5>Javascript</h5>
-          <img src="https://www.pexels.com/photo/adult-beard-boy-casual-220453/">
-          <li>1 year experience</li>
-        </div>
-        <div class="col-sm-3">
-          <h5>C</h5>
-          <img src="https://www.pexels.com/photo/adult-beard-boy-casual-220453/">
-          <li>1 year experience</li>
-        </div>
-      </div>
-    </section>
-    <section class="container">
-      <h2>Professional Projects</h2>
-      <div class="row">
-        <ul>
-          <li>JSON python SMTP forex</li>
-          <li>Gomoku</li>
-        </ul>
-      </div>
-      <h2>Personal Projects</h2>
-      <div class="row">
-        <ul>
-          <li>JSON python SMTP forex</li>
-          <li>Gomoku</li>
-        </ul>
-      </div>
-    </section> -->
   </body>
 	<footer class="container">
     <div class="row">
       <p class="col-sm-4">&copy; 2019 Sean Yeo</p>
-      <!-- <div class="col-sm-2">
-        <a href="https://medium.com/">Medium</a>
-      </div> -->
       <div class="col-sm-4">
         <a href="https://github.com/syeo-1" style="font-size: 18px" target="_blank">Github</a>
       </div>
       <div class="col-sm-4">
-        <a href="https://www.linkedin.com/" style="font-size: 18px" target="_blank">LinkedIn</a>
+        <a href="www.linkedin.com/in/seanyeo-1" style="font-size: 18px" target="_blank">LinkedIn</a>
       </div>
-      <!-- <div class="col-sm-2">
-        <a href="https://tunein.com/podcasts/">Podcast</a>
-      </div> -->
     </div>
   </footer>
 </html>
