--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         <a href="https://github.com/syeo-1" style="font-size: 18px" target="_blank">Github</a>
       </div>
       <div class="col-sm-4">
-        <a href="www.linkedin.com/in/seanyeo-1" style="font-size: 18px" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/seanyeo-1" style="font-size: 18px" target="_blank">LinkedIn</a>
       </div>
     </div>
   </footer>
