--- a/projects.html
+++ b/projects.html
@@ -22,11 +22,6 @@
         <div class="col-sm-6">
           <p class="font-weight-bold">Forex-Noti</p>
           <a href="https://github.com/syeo-1/forex-noti" target="_blank"><img src="./images/forex.jpg" class="portrait"></a>
-          <!-- <ul>
-            <li><a href="https://github.com/syeo-1/forex-noti">project link</a></li>
-            <li>honor roll</li>
-            <li>cross country club</li>
-          </ul> -->
         </div>
         <div class="col-sm-6">
           <p class="font-weight-bold">Gomoku</p>
@@ -67,7 +62,7 @@
         <a href="https://github.com/syeo-1" style="font-size: 18px" target="_blank">Github</a>
       </div>
       <div class="col-sm-4">
-        <a href="www.linkedin.com/in/seanyeo-1" style="font-size: 18px" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/seanyeo-1" style="font-size: 18px" target="_blank">LinkedIn</a>
       </div>
     </div>
   </footer>
