--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           Hey there, my name is Sean Yeo and I'm a third year computer science student at the University of Victoria. Throughout my life, I've found enjoyment in working with numbers and using this knowledge to help me make decisions and solve small personal problems. Now, with my increased knowledge in the fields of computer science, software engineering, and statistics, I hope to solve problems that not only better my own life, but the lives of those around me. Currently, I am developing a service that notifies people about desirable foreign exchange rates.
           <br>
           <br>
-          When I'm not studying or working on my personal projects, I enjoy running, badminton, and playing video games (preferably Nintendo ones).
+          When I'm not studying or working on my personal projects, I enjoy running, badminton, and playing Super Smash Bros.
         </p>
         <img class="col-sm-6" src="./images/headshot.jpg">
       </div>
